# cs6120-work

./: README.md
brilliant/: CHANGELOG.md  LICENSE  README.md  bigger.bril  bigger.out  brilliant.cabal  example.bril  simple.bril  simple.out  tests.sh  turnt.toml
brilliant/app/: Analysis.hs  Bril.hs  CFG.hs  Loop.hs  Main.hs  Opt.hs  SSA.hs  Util.hs
poly/: Makefile  README.md  bril.py  catalan.bril  codegen.py  graph.py  main.py  relooper.py  static.py  tests.sh  util.py
